Revision history for Perl extension Wx.

0.23
	- Added wxArtProvider and Wx::PlArtProvider
          (thanks to Matthew "Cheetah" Gabeler-Lee).
        - Compatibility with wxWidgets 2.5.4.
	- Added Wx::PlPreviewFrame, Wx::PlPreviewControlBar,
	  Wx::PrintFactory.
	- Added Wx::PopupWindow and Wx::PopupTransientWindow
	- Added Wx::DatePickerCtrl (2.5)

0.22  Tue Jan  4 23:07:56 CET 2005
	- Alpha channel support for Wx::Image (2.5).
	- Wrapped wxChoicebook (2.5).
	- Various new APIs for wxWidgets 2.5.x.

0.21  Sat Dec 11 18:01:25 CET 2004
	- Fixed installation of 'wxPerl' command on Mac OS X.
	- Fixed running in the embedded case (still requires the
	  application to call ExitMainLoop at the right places).
	- Wrapped wxNavigationKeyEvent.
	- Using die() in an event handler should not crash anymore
	  (it might leak).
	- Added Wx::PlWindow, to be used for custom controls.
	- New (Windows-only) --mslu flag for Makefile.PL.
	- Wx::NotebookSizer is now no longer needed and
	  deprecated.

0.20  Sun Jun 20 10:52:40 CEST 2004
	- wxWidgets 2.5.2 compilation fixes.
	- Fixed wxHtmlWindow behaviour on non-Win32 platforms.

0.19  Sat Apr 24 12:32:36 CEST 2004
	- Started wxHtmlParser/wxHtmlTag/custom tag handlers
	  wrapping.
	- Mac OS X build now installs the 'wxPerl' binary in perl
	  bin directory.
	- wxDatagramSocket and wxSockAddress.
	- wxNumberEntryDialog. (2.5)
	- wxGridBagSizer. (2.5)
	- wxListbook. (2.5)

0.18  Sun Nov 23 14:42:39 CET 2003
	- Corrected handling of UTF-8 encoded strings in ANSI builds.
	- Added wxGridTableMessage.
	- Fixed build problems with GTK 2 and/or Unicode on
	  Unix hosts.

0.17  Tue Sep  9 22:45:40 CEST 2003
	- Bugfix release.
	- Completed wxWindows 2.5 compatibility.

0.16  Mon Aug 25 00:26:44 CEST 2003
	- Added Wx::PlGridCellEditor and Wx::PlGridCellRenderer
	  for custom Wx::Grid cell editing/displaying.
	- Added Wx::PlGridTable for custom Wx::Grid storage.
	- Fixed Wx::SocketServer::Accept.