@@ -4,7 +4,7 @@
 // Author:      Mattia Barbon
 // Modified by:
 // Created:     29/10/2000
-// RCS-ID:      $Id: Event.xs,v 1.42 2005/02/19 17:27:14 mbarbon Exp $
+// RCS-ID:      $Id: Event.xs,v 1.43 2005/03/28 14:01:00 mbarbon Exp $
 // Copyright:   (c) 2000-2005 Mattia Barbon
 // Licence:     This program is free software; you can redistribute it and/or
 //              modify it under the same terms as Perl itself
@@ -145,6 +145,21 @@ wxCommandEvent::SetInt( intCommand )
 void
 wxCommandEvent::SetString( string )
     wxString string
+
+MODULE=Wx_Evt PACKAGE=Wx::ContextMenuEvent
+
+wxContextMenuEvent*
+wxContextMenuEvent::new( type = 0, id = 0, pos = wxDefaultPosition )
+    wxEventType type
+    int id
+    wxPoint pos
+
+wxPoint
+wxContextMenuEvent::GetPosition()
+
+void
+wxContextMenuEvent::SetPosition( pos )
+    wxPoint pos
 
 MODULE=Wx_Evt PACKAGE=Wx::PlEvent
 
