@@ -4,7 +4,7 @@
 ## Author:      Mattia Barbon
 ## Modified by:
 ## Created:     29/10/2000
-## RCS-ID:      $Id: typemap,v 1.72 2005/03/19 17:51:16 mbarbon Exp $
+## RCS-ID:      $Id: typemap,v 1.73 2005/03/28 14:01:00 mbarbon Exp $
 ## Copyright:   (c) 2000-2005 Mattia Barbon
 ## Licence:     This program is free software; you can redistribute it and/or
 ##              modify it under the same terms as Perl itself
@@ -269,6 +269,7 @@ wxRegion *              O_WXOBJECT
 Wx_Icon *               O_WXOBJECT
 wxIcon *                O_WXOBJECT
 wxIconBundle *          O_NON_WXOBJECT
+wxIconLocation *        O_NON_WXOBJECT
 Wx_Bitmap *             O_WXOBJECT
 wxBitmap *              O_WXOBJECT
 Wx_Cursor *             O_WXOBJECT
@@ -283,6 +284,9 @@ wxBrush *               O_WXOBJECT
 wxBitmapHandler *       O_WXOBJECT
 Wx_Palette *            O_WXOBJECT
 wxPalette *             O_WXOBJECT
+wxMimeTypesManager *    O_NON_WXOBJECT
+wxFileType *            O_NON_WXOBJECT
+wxFileTypeInfo *        O_NON_WXOBJECT
 
 wxImage *               O_WXOBJECT
 wxImageHandler *        O_WXOBJECT
@@ -318,6 +322,7 @@ wxActivateEvent *       O_WXOBJECT
 wxBookCtrlEvent *       O_WXOBJECT
 wxCloseEvent *          O_WXOBJECT
 wxCommandEvent *        O_WXOBJECT
+wxContextMenuEvent *    O_WXOBJECT
 wxEraseEvent *          O_WXOBJECT
 wxFindDialogEvent *     O_WXOBJECT
 wxFocusEvent *          O_WXOBJECT
@@ -343,6 +348,7 @@ wxScrollWinEvent *      O_WXOBJECT
 wxSpinEvent *           O_WXOBJECT
 wxSplitterEvent *       O_WXOBJECT
 wxSysColourChangedEvent * O_WXOBJECT
+wxTaskBarIconEvent *    O_WXOBJECT
 wxTimerEvent *          O_WXOBJECT
 wxTreeEvent *           O_WXOBJECT
 wxUpdateUIEvent *       O_WXOBJECT
